# finite-domain-function

./: finite-domain-function.cabal
src/Data/Function/: Finite.hs
